--- a/App/QuakeScope/gradle/libs.versions.toml
+++ b/App/QuakeScope/gradle/libs.versions.toml
@@ -23,6 +23,9 @@ material = "1.11.0"
 material-icons-extended = "1.6.1"
 appcompat = "1.6.1"
 hilt-navigation-compose = "1.2.0"
+datastore = "1.1.1"
+play-services-location = "21.0.1"
+coroutines-play-services = "1.7.3"
 
 
 [libraries]
@@ -74,6 +77,7 @@ moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "mosh
 
 # Google Maps
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "maps-compose" }
+play-services-location = { module = "com.google.android.gms:play-services-location", version.ref = "play-services-location" }
 
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
@@ -81,6 +85,8 @@ androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", vers
 androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
+androidx-datastore = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
+coroutines-play-services = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-play-services", version.ref = "coroutines-play-services" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
